Now rendering each single shift in correct table td element, with correct color. Need to work on showing total hours per employee next, and sorting by first/last name.

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@ table tbody tr td {
   background-color: azure;
   border: 1px solid blue;
   padding: 0.5rem;
+  color: white;
+  font-weight: bold;
 }
 
 .shift-role-color-red {
